<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.AkunActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/icon_cart">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_akun"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hai"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acc"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="@color/white"
            android:backgroundTint="#002B5B"
            app:shapeAppearanceOverlay="@style/button"/>

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:backgroundTint="#002B5B"
            app:shapeAppearanceOverlay="@style/button"/>

    </LinearLayout>

</LinearLayout>