<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:background="@color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/car1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/NewCarsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_mobil"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tvLocationNewCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_account_circle_24"/>

                <TextView
                    android:id="@+id/tvNewPassanger"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:text="@string/_5"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:padding="2dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnBookNewCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesan"
                android:backgroundTint="#002B5B"
                app:shapeAppearanceOverlay="@style/button"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>