<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".car.BookCarActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/icon_cart_rounded"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_outline_shopping_bag_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pemesanan"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_lenkap"
                        android:textColor="@color/icon_cart"/>

                    <TextView
                        android:id="@+id/tvFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_lenkap"
                        android:background="@drawable/rounded_background"
                        android:padding="15dp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_mobil"
                        android:textColor="@color/icon_cart"/>

                    <TextView
                        android:id="@+id/tvMobil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_lenkap"
                        android:background="@drawable/rounded_background"
                        android:padding="15dp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal_berangkat"
                            android:textColor="@color/icon_cart"/>

                        <TextView
                            android:id="@+id/selectedDayStart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/dd_mm_yyyy"
                            android:textSize="18sp"
                            android:background="@drawable/custom_edittext_border"
                            android:padding="15dp"
                            app:drawableEndCompat="@drawable/ic_baseline_calendar_month_24" />

                    </LinearLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Tanggal Kembali"
                            android:textColor="@color/icon_cart"/>

                        <TextView
                            android:id="@+id/selectedDayBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/dd_mm_yyyy"
                            android:textSize="18sp"
                            android:background="@drawable/custom_edittext_border"
                            android:padding="15dp"
                            app:drawableEndCompat="@drawable/ic_baseline_calendar_month_24" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menggunakan_driver_marsada_trip"
                        android:textColor="@color/icon_cart"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/rgDriver"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radioYa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ya"/>

                            <RadioButton
                                android:id="@+id/radioNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tidak"/>

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_book"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/pesan"
        android:backgroundTint="@color/icon_cart"
        app:shapeAppearanceOverlay="@style/button"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"/>

</RelativeLayout>