<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tv_nama_mobil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_mobil"
            android:textSize="20sp"
            android:textColor="@color/outline_text"
            android:fontFamily="sans-serif-black"/>

        <TextView
            android:id="@+id/tv_jenisMobil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_mobil"
            android:textSize="15sp"
            android:textColor="@color/outline_text"/>

        <ImageView
            android:id="@+id/img_mobil"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/car1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_account_circle_24"/>

            <TextView
                android:id="@+id/tvPassanger"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_car_door"/>

            <TextView
                android:id="@+id/tvDoor"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_tuas"/>

            <TextView
                android:id="@+id/tvTransmisi"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_winter"/>

            <TextView
                android:id="@+id/tvWinter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_location"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:textSize="15sp"/>

            
        </LinearLayout>

        <Button
            android:id="@+id/btnDetail"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/detail"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:backgroundTint="#002B5B"
            app:shapeAppearanceOverlay="@style/button"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>